Simplify and clarify code